# bombeirb

./: .cproject  .gitignore  .project  CMakeLists.txt  HOWTO.md  README.md  install.md  test
sources/: Makefile
sources/data/: doc_data_files.txt  game_default_easy.txt  game_default_hard.txt  map_easy_0.txt  map_easy_1.txt  map_hard_0.txt  map_hard_1.txt
sources/data/games/: default.txt
sources/data/maps/: map_0.txt  map_1.txt
sources/include/: bomb.h  constant.h  game.h  map.h  menu.h  monster.h  player.h  sprite.h  structures.h  window.h
sources/maps/: map_easy_0.txt  map_hard_0.txt  map_hard_1.txt  map_hard_2.txt
sources/src/: Makefile  bomb.c  game.c  main.c  map.c  menu.c  monster.c  player.c  sprite.c  window.c
