cmake_minimum_required(VERSION 3.9)
project(pg110_2017_gb_t2)

set(CMAKE_CXX_STANDARD 11)

add_executable(pg110_2017_gb_t2
        img/bombeirb.png
        img/explosion.png
        img/explosion2.png
        sources/include/constant.h
        sources/include/game.h
        sources/include/map.h
        sources/include/misc.h
        sources/include/player.h
        sources/include/sprite.h
        sources/include/window.h
        sources/sprite/banner_0.jpg
        sources/sprite/banner_1.jpg
        sources/sprite/banner_2.jpg
        sources/sprite/banner_3.jpg
        sources/sprite/banner_4.jpg
        sources/sprite/banner_5.jpg
        sources/sprite/banner_6.jpg
        sources/sprite/banner_7.jpg
        sources/sprite/banner_8.jpg
        sources/sprite/banner_9.jpg
        sources/sprite/banner_life.png
        sources/sprite/banner_line.png
        sources/sprite/banner_range.png
        sources/sprite/bomb1.png
        sources/sprite/bomb2.png
        sources/sprite/bomb3.png
        sources/sprite/bomb4.png
        sources/sprite/bomberwoman.png
        sources/sprite/bonus_bomb_nb_dec.png
        sources/sprite/bonus_bomb_nb_inc.png
        sources/sprite/bonus_bomb_range_dec.png
        sources/sprite/bonus_bomb_range_inc.png
        sources/sprite/closed_door.png
        sources/sprite/door.png
        sources/sprite/door_closed.png
        sources/sprite/door_opened.png
        sources/sprite/explosion.png
        sources/sprite/flag.png
        sources/sprite/key.png
        sources/sprite/monster_down.png
        sources/sprite/monster_left.png
        sources/sprite/monster_right.png
        sources/sprite/monster_up.png
        sources/sprite/player_down.png
        sources/sprite/player_left.png
        sources/sprite/player_right.png
        sources/sprite/player_up.png
        sources/sprite/stone.png
        sources/sprite/tree.png
        sources/sprite/wood_box.png
        sources/src/game.c
        sources/src/main.c
        sources/src/map.c
        sources/src/misc.c
        sources/src/player.c
        sources/src/sprite.c
        sources/src/window.c
        sources/Makefile
        install.md
        README.md)
